--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
             </div>
         </div>
         <script src="app.js" defer></script>
+        <!-- Service worker registration -->
+        <script>
+            if ("serviceWorker" in navigator) {
+                navigator.serviceWorker.register("service_worker.js").then(registration => {
+                    console.log("SW Registered!");
+                    console.log(registration);
+                }).catch(error => {
+                    console.log("SW Registration Failed!");
+                    console.log(error);
+                });
+            }
+        </script>
 
     </body>
 </html>
